# fiction_wiki_builder

./: .env  .gitignore  README.md  docker-compose.yml  fivebooks.sh  kibana.yml  mm.sh  pyproject.toml  requirement.txt  xuanhuan.sh
prompt/: entity_extraction.txt  merge_entity.txt
scripts/: batch_rename_chapters.py  crawl_fiction.py  download_books_from_ids.py  extract_book_ids.py  extract_knowledge.py  ingest_books.py  script_gen.py  wuxia.sh
src/fiction_wiki_builder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fwb/: embedding_model.py  entities.py  entity_data.py  entity_extractor.py  es_storage.py  fiction_wiki_grpah_builder.py  graph_storage.py  parallel_processor.py  progress_buf.py  retriever.py  vector_storage.py  wiki_builder.py  wiki_graph.py
src/fwb/generative/gemini/: gemini_model.py
src/fwb/generative/gemini/google_helper/: google_tool_utils.py  llm_config.py
src/fwb/knowledge_extraction/: data_store.py  extractor.py  pydantic_models.py
src/fwb/llm/: gemini.py
src/fwb/llm/gemini/: gemini_model.py
src/fwb/llm/gemini/google_helper/: rate_tracker.py
tests/: test_prompt.py
